--- a/src/index.css
+++ b/src/index.css
@@ -27,16 +27,92 @@
     background: rgb(135,192,167, 0.2);
     border-radius: .2em .2em 0 0;
     padding: .4em;
-    padding: 18px;    
-    width: 50%;
+    padding: 20px;    
+    width: 70%;
     font-size: 15px;
     color: rgba(114,147,204);
     box-sizing: border-box;
     margin-bottom: 15px;
   }
 
+  .inputRange {
+    appearance: none;
+    width: 70%;
+    height: 10px;
+    border: none;
+    border-radius: 0.2em;
+    background: rgb(135, 192, 167, 0.2);
+    outline: none;
+    margin-bottom: 15px;
+}
+
+.inputRange::-webkit-slider-thumb {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: rgba(114, 147, 204);
+    cursor: pointer;
+}
+
+.inputRange::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    border: none;
+    border-radius: 50%;
+    background: rgba(114, 147, 204);
+    cursor: pointer;
+}
+
+.inputRange::-webkit-slider-runnable-track {
+    height: 10px;
+    background: rgba(114, 147, 204);
+    border-radius: 0.2em;
+}
+
+.inputRange::-moz-range-track {
+    height: 10px;
+    background: rgba(114, 147, 204);
+    border: none;
+    border-radius: 0.2em;
+}
+
+
   .errorBoxVal{
     font-size: large;
     color: red;
     font-weight: bold;  
   }
+
+  .button-list{
+    list-style: none;
+  }
+
+  .button-62 {
+    background: linear-gradient(to top right, #87c0a7, #6981c1);
+    border: 0;
+    border-radius: 12px;
+    margin: 5px;
+  
+    display: block;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 2.5;
+    outline: transparent;
+    padding: 0 1.5rem;
+    text-align: center;
+    text-decoration: none;
+    transition: box-shadow .2s ease-in-out;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+  }
+
+  .button-62:not([disabled]):hover {
+    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem #87c0a7, .125rem .125rem 1rem #6981c1;
+  }
+  
